remove notification logic
